# proyecto-final

./: .gitignore  Proyecyto-final copy.ipynb  Proyecyto-final.ipynb  clustering.py  descargar_datos.py  evaluar_model.py  limpieza_texto.py  modelo_universal.py  preparar_datos.py  pyproject.toml  solo_5_filas.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.5a82c003-6993984c-a70c9fcc-5ad48925.tmp  cat_feature_index.7fdb3592-39e37795-333b64f-9bdd5881.tmp  cat_feature_index.904b99d4-98483d77-fe098ced-bd1ee1bf.tmp  cat_feature_index.b7be23a5-82c17ca1-61084639-764a75eb.tmp
