[project]
name = "proyecto-final"
version = "0.1.0"
description = "Análisis de datos con árboles de decisión y AutoGluon"
readme = "README.md"
# Esto obliga al proyecto a usar exactamente o superior a la 3.11.9
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "sentence_transformers-5.4.1"

]


[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.10",
]
